Fix modal overflows on mobile

--- a/mbf-site/src/css/ModManager.css
+++ b/mbf-site/src/css/ModManager.css
@@ -37,5 +37,4 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    min-width: 30rem;
 }
